[package]
name = "rust-bloom-filter"
version = "0.1.0"
description = "A bloom filter implementation in Rust"
readme = "README.md"
keywords = ["bloom", "filter"]
license = "MIT"

[dependencies]

[lib]
name = "bloom_filter"
path = "src/lib.rs"
crate-type = ["lib"]



[dev-dependencies]

[package.metadata.docs.rs]
all-features = true
